@@ -1,3 +1,10 @@
+2009-02-19  Rafael Avila de Espindola  <espindola@google.com>
+
+	* gcc.dg/lto/20090218-1_0.c: New.
+	* gcc.dg/lto/20090218-1_1.c: New.
+	* gcc.dg/lto/20090218-2_0.c: New.
+	* gcc.dg/lto/20090218-2_1.c: New.
+
 2009-02-18  Diego Novillo  <dnovillo@google.com>
 
 	* g++.dg/opt/thunk3-1.C: Rename from thunk3.C
