@@ -1,0 +1,3 @@
+void emit_push_insn () {
+  set_mem_alias_set ();
+}
